Changed table headers to break words to allow for display on small devices. Fixed button row at top of Dashboard so that they move dynamically on resize. #34

--- a/TabRepository/wwwroot/css/main.css
+++ b/TabRepository/wwwroot/css/main.css
@@ -27,12 +27,11 @@
 }
 
 #new-tab-button-container {
-    margin-left: auto;
-    margin-right: 10px;
+    margin-left: 12px;
 }
 
-#new-album-button-container {
-    margin-left: 10px;
+#new-project-button {
+    margin-right: 10px;
 }
 
 .splitter-horizontal {
@@ -95,4 +94,12 @@ td {
 
 #dashboard {
     height: 100%;
+}
+
+.table-header {
+    word-wrap: break-word;
+}
+
+.tabversions-table {
+    table-layout: fixed;
 }
